# QuickROIC

./: .gitignore  README.md  asset-manifest.json  docker-compose.prod.yml  docker-compose.yml  index.html
.devcontainer/: docker-compose-backend.yml  docker-compose-frontend.yml  docker-compose.yml
.github/workflows/: CD.yml  CI.yml  Test.yml
backend/: .devcontainer.json  Dockerfile  Makefile  pyproject.toml  server.py
backend/api/: __init__.py  mutation.py  object.py  query.py  scheme.py  server.py
backend/roic/: __init__.py  analytics.py  transform.py  utility.py
backend/test/: test_analytics.py  test_mutaion.py  test_query.py  test_server.py  test_transform.py  test_utility.py
backend/test/Mixin/: __init__.py  graphqlfileupload.py
backend/test/snapshots/: snap_test_query.py
backend/test/test_excel/: RoicWaccCalcTestInput1.xlsx  RoicWaccCalcTestInput2.xlsx  RoicWaccCalcTestOutput.xlsx  SpeedaTransformTestInput.xlsx  SpeedaTransformTestInput_splitted_1.xlsx  SpeedaTransformTestInput_splitted_2.xlsx
frontend/: .devcontainer.json  .env.development  Dockerfile  apollo.config.js  codegen.yml  craco.config.js  graphql.schema.json  localSchema.graphql  package.json  tsconfig.json
frontend/.storybook/: main.js  preview.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  store.ts  storybook.test.js  test-utils.tsx
static/js/: 2.c669551e.chunk.js.LICENSE.txt  3.7cf50af9.chunk.js  3.7cf50af9.chunk.js.map  main.011e2d7a.chunk.js  main.011e2d7a.chunk.js.map  main.14d312b6.chunk.js  main.14d312b6.chunk.js.map  main.20d28d81.chunk.js  (+13 more)
(+43 files in other folders)
