[tool.poetry]
name = "quickroic"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pandas = "^1.3.3"
Flask-Cors = "^3.0.10"
openpyxl = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
